<!--
  ~ Copyright (c) 2018. Radio Polska - All Rights Reserved.
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at.
  ~
  ~         http://radiopolska.com/sourcecode/policy
  ~
  ~ Unless required by applicable law or agreed to in writing,
  ~ software distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:title="@string/title_remove_downloads"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_download"
        android:orderInCategory="100"
        android:title="@string/title_download_now"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_move_gallery"
        android:orderInCategory="100"
        android:title="@string/title_move_to_media_store"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_report"
        android:orderInCategory="100"
        android:title="@string/title_report_radio"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:title="@string/title_share"
        app:showAsAction="never" />


</menu>