<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/ed_radio_name"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_edit_text"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:background="@drawable/bg_light_edit_search"
                    android:hint="@string/title_radio_name"
                    android:nextFocusDown="@+id/ed_radio_link"
                    android:padding="@dimen/dialog_margin"
                    android:singleLine="true"
                    android:textColor="@color/light_text_main_color"
                    android:textColorHint="@color/light_text_hint_color"
                    android:textSize="@dimen/text_size_body" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/ed_radio_link"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_edit_text"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:background="@drawable/bg_light_edit_search"
                    android:hint="@string/info_hint_radio_link"
                    android:imeOptions="actionDone"
                    android:inputType="textUri"
                    android:padding="@dimen/dialog_margin"
                    android:singleLine="true"
                    android:textColor="@color/light_text_main_color"
                    android:textColorHint="@color/light_text_hint_color"
                    android:textSize="@dimen/text_size_body" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/cb_live_radio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/title_live"
                        android:textColor="@color/light_text_main_color"
                        android:textSize="@dimen/text_size_body" />

                    <RadioButton
                        android:id="@+id/cb_mp3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:text="@string/title_mp3_link"
                        android:textColor="@color/light_text_main_color"
                        android:textSize="@dimen/text_size_body" />
                </RadioGroup>

                <com.balysv.materialripple.MaterialRippleLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    app:mrl_rippleAlpha="0.2"
                    app:mrl_rippleColor="@color/light_ripple_button_color"
                    app:mrl_rippleHover="true"
                    app:mrl_rippleOverlay="true">

                    <LinearLayout
                        android:id="@+id/btn_add"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/row_height_button"
                        android:background="@drawable/btn_dark_rounded_play_all"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/img_add"
                            android:layout_width="@dimen/size_img_small"
                            android:layout_height="@dimen/size_img_small"
                            android:layout_gravity="center_vertical"
                            app:tint="@color/white"
                            app:srcCompat="@drawable/ic_add_dark_24dp" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_add"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="@dimen/dialog_margin"
                            android:text="@string/title_add"
                            android:textColor="@color/white"
                            android:textSize="@dimen/text_size_subhead"
                            android:textStyle="bold" />

                    </LinearLayout>
                </com.balysv.materialripple.MaterialRippleLayout>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>


    </RelativeLayout>
</layout>
